# bufro

./: .gitignore  .gitmodules  README.md  docker-compose.yml
.github/workflows/: oci.yaml
api/: Dockerfile  Makefile  README.md  go.mod  go.sum
api/cmd/: main.go
api/internal/auth/: auth.go  keycloak.go
api/internal/bufro/: bufro.go
api/internal/config/: config.go
api/internal/mock/: auth.go  bufro.go  store.go  token.go
api/internal/model/: buf.go  type.go
api/internal/pb/: bufro.pb.go
api/internal/server/: helpers.go  helpers_test.go  middleware.go  resp_writer.go  server.go  server_test.go
api/internal/store/: pgstore.go  store.go
api/internal/store/migrations/: 000001_create_buf_table.down.sql  000001_create_buf_table.up.sql  000002_add_creation_time_to_buf.down.sql  000002_add_creation_time_to_buf.up.sql
api/internal/version/: version.go  version.txt
client/: CMakeLists.txt  Info.plist  README.md  about_dialog.cxx  api.hxx  app.cxx  app.hxx  auth.cxx  capture.cxx  capture.hxx  constants.hxx  main.cxx  resources.qrc  update_version.cmake  vcpkg.json
client/assets/: app_icon.icns  generate_icns.sh
client/pb/: bufro.pb.cc  bufro.pb.h
client/src/: about_dialog.hxx  app.cxx  app.hxx  auth.cxx  auth.hxx  capture.cxx  capture.hxx  capture_widget.cxx  capture_widget.hxx  constants.hxx  main.cxx  network.hxx  recorder.cxx  recorder.hxx  screen_capturer.cxx  screen_capturer.hxx  settings.hxx  version.hxx.in
client/src/pb/: bufro.pb.cc  bufro.pb.h
proto/: Makefile  bufro.proto
